--- a/03-methodology.Rmd
+++ b/03-methodology.Rmd
@@ -44,7 +44,7 @@ Les résultats présentés dans ce TFE étant descriptifs plutôt que cherchant 
 
 ## Éthique
 
-S'agissant d'une étude rétrospective menée sur des dossiers médicaux que je gère dans le cadre d'une pratique clinique habituelle et considérant qu'aucun examen supplémentaire, ni interview n'a été réalisée pour récolter les données, le présent TFE n'était pas redevable d'un avis devant le comité d'éthique de la faculté de médecine. En effet, le travail ne répondait à aucun des critères publiés par le comité d'éthique vis-à-vis des TFE sur lesquels ils devaient donner leur accord avant la collecte des données. Le département de médecine générale de l'Université de Liège a été contacté en vue de confirmer que ce TFE ne correspondait pas aux critères nécessitant une évaluation préalable par le comité d'éthique. Les patient·e·s éligibles ont toutefois été contacté·e·s par écrit en vue de leur expliquer les tenants et aboutissants de ce TFE et de leur demander l'autorisation d'utiliser leurs données dans le cadre de son élaboration, en spécifiant qu'un refus n'entraînerait aucune conséquence négative sur notre relation thérapeutique ni sur la poursuite du suivi. Il leur a de plus été rappelé qu'iels pouvaient retirer leur consentement à n'importe quel moment, et ce sans conséquence. Les données des patient·e·s n'ont été extraites qu'en cas de réponse écrite positive de leur part.
+S'agissant d'une étude rétrospective menée sur des dossiers médicaux que je gère dans le cadre d'une pratique clinique habituelle et considérant qu'aucun examen supplémentaire ni interview n'a été réalisée pour récolter les données, le présent TFE n'était pas redevable d'un avis devant le comité d'éthique de la faculté de médecine. En effet, le travail ne répondait à aucun des critères publiés par le comité d'éthique vis-à-vis des TFE sur lesquels il devait donner son accord avant la collecte des données. Le département de médecine générale de l'Université de Liège a été contacté en vue de confirmer que ce TFE ne correspondait pas aux critères nécessitant une évaluation préalable par le comité d'éthique. Les patient·e·s éligibles ont toutefois été contacté·e·s par écrit en vue de leur expliquer les tenants et aboutissants de ce TFE et de leur demander l'autorisation d'utiliser leurs données dans le cadre de son élaboration, en spécifiant qu'un refus n'entraînerait aucune conséquence négative sur notre relation thérapeutique ni sur la poursuite du suivi. Il leur a de plus été rappelé qu'iels pouvaient retirer leur consentement à n'importe quel moment, et ce sans conséquence. Les données des patient·e·s n'ont été extraites qu'en cas de réponse écrite positive de leur part.
 
 En outre, considérant que le seul risque encouru par le patient résidait dans une fuite des données, un identifiant de 3 caractères générés aléatoirement a été attribué à chaque patient·e lors de l'extraction des données afin de garantir leur anonymat. Le document de codage permettant de faire le lien entre l'identité des patient·e·s et leur identifiant n'est connu que de ma personne et se situe dans un dossier sécurisé.
 
