--- a/05-discussion.Rmd
+++ b/05-discussion.Rmd
@@ -10,7 +10,7 @@ Ce TFE a présenté les données de 26 patient·e·s transgenres suivi·e·s dur
 
 Près de la moitié des participant·e·s venaient d'une autre province que Liège alors que c'est là que j'exerce. Cette mobilité géographique naît du manque de professionnel·le·s formé·e·s et est décrite dans la littérature comme représentant une barrière au soin [@hostetter2022]. En particulier, certain·e·s participant·e·s venant du Hainaut mettaient près de deux heures en transports en commun pour se rendre en consultation. Devoir parcourir de telles distances pour avoir accès à des soins de santé n'est pas une situation enviable sur le plan de la santé publique.
 
-Au niveau du statut à la mutuelle, `r sum(obj_demog_data$mutuelle == 'BIM')` des participant·e·s étaient BIM, soit plus du double de la moyenne wallonne de 21.5% [@ghesquiere2021]. Ces résultats sont cohérents avec des indicateurs d'une plus grande précarité au sein de la population des personnes transgenres, en raison des discriminations dont elles font l'objet. En Belgique, 30,8% des répondant·e·s du rapport de l'IEFH éprouvaient des difficultés financières à la fin du mois, contre une moyenne belge de 13.7% [@motmans2017].
+Au niveau du statut à la mutuelle, `r .p_BIM` des participant·e·s étaient BIM, soit près du double de la moyenne wallonne de 21.5% [@ghesquiere2021]. Ces résultats sont cohérents avec des indicateurs d'une plus grande précarité au sein de la population des personnes transgenres, en raison des discriminations dont elles font l'objet. En Belgique, 30,8% des répondant·e·s du rapport de l'IEFH éprouvaient des difficultés financières à la fin du mois, contre une moyenne belge de 13.7% [@motmans2017].
 
 Sur le plan administratif, le changement de prénom ou de marqueur de genre à l'état civil n'était pas systématique. En pratique, les médecins généralistes doivent donc être conscient·e·s que les documents officiels des patient·e·s ne reflètent pas nécessairement leur vécu. Il est donc nécessaire de leur demander comment iels préfèrent être genré·e·s et appelé·e·s en consultation. En outre, une conséquence pratique du changement de marqueur de genre est qu'il entraîne la création d'un nouveau numéro de registre national et la désactivation du précédent. De fait, en plus de quelques difficultés temporaires de communication avec les mutuelles, la totalité du dossier sur le Réseau Santé Wallon devient inaccessible au moment du changement.
 
@@ -50,7 +50,7 @@ L'augmentation de l'hémoglobine, de l'hématocrite, de la créatinine et des tr
 
 ### L'inhibition de l'axe hypothalamo-hypophyso-gonadique
 
-Peu importe le sexe, l'inhibition de l'axe HHG est produite par l'action des œstrogènes sur l'hypothalamus qui entraîne une diminution de la concentration en LH et FSH[@hall2019; @liu2019]. La production de testostérone étant stimulée par une action de la LH sur les testicules [@liu2019], on comprend aisément que les taux de testostérone augmentent lorsque la LH augmente dans la figure \@ref(fig:OutcomePlotF). En outre, le rôle inhibiteur de l'E2~s~ explique également le fait que la LH diminue tandis que l'E2~s~ augmente. Toutefois, les valeurs de LH variaient fortement pour une même valeur d'E2~s~. Cette variabilité, combinée aux concentrations relativement élevées en E2~s~ nécessaires pour inhiber complètement l'axe HHG, explique sans doute qu'une relation directe entre la T~s~ et l'E2~s~ n'a pu être mise en évidence ici. On constate également sur ce graphique que la Spironolactone n'a pas d'influence notable sur l'axe HHG. En effet, lors de la combinaison œstradiol + Spironolactone, c'est bel et bien l'E2~s~ qui permet une diminution de la T~s~ [@angus2021]. Les T~s~ relativement élevées chez les patient·e·s prenant de la Spironolactone proviennent des valeurs d'E2~s~ plus faibles (voir tableau \@ref(tab:OutcomeTableF)). Après discussion avec les patient·e·s en question lors d'une consultation de suivi, mon hypothèse sur cet E2~s~ bas réside en une application suboptimale du gel chez deux des patient·e·s. Elle ne pourra cependant pas être confirmée d'ici la publication de ce TFE. Pour les personnes sous THAG masculinisant, la situation est quelque peu différente. En effet, c'est la FSH qui stimule la production d'E2~s~ par les ovaires [@hall2019] et c'est majoritairement l'aromatisation de la T~s~ en E2~s~ qui permet d'inhiber la production de FSH[@liu2019]. Autrement dit, une relation linéaire décroissante où la l'E2~s~ diminue tandis que la T~s~ augmente, en miroir de ce qu'on observe sous THAG féminisant, n'est pas observée puisqu'il faut que la T~s~ se transforme en E2~s~ pour que la production endogène d'E2~s~ diminue. En outre, la FSH ne dépend que partiellement de la stimulation de la GnRH, en comparaison avec la LH. De fait, une suppression complète de la GnRH n'entraîne une inhibition que de 40-60% de la FSH contre 90% de la LH [@hall2019]. Ces différents éléments pourraient permettre d'expliquer à la fois les valeurs plus élevées en FSH et en E2~s~ que chez les hommes cisgenres ainsi que le fait que l'ovulation reste possible sous THAG masculinisant, bien que plus rare [@taub2020].
+Peu importe le sexe, l'inhibition de l'axe HHG est produite par l'action des œstrogènes sur l'hypothalamus qui entraîne une diminution de la concentration en LH et FSH [@hall2019; @liu2019]. La production de testostérone étant stimulée par une action de la LH sur les testicules [@liu2019], on comprend aisément que les taux de testostérone augmentent lorsque la LH augmente dans la figure \@ref(fig:OutcomePlotF). En outre, le rôle inhibiteur de l'E2~s~ explique également le fait que la LH diminue tandis que l'E2~s~ augmente. Toutefois, les valeurs de LH variaient fortement pour une même valeur d'E2~s~. Cette variabilité, combinée aux concentrations relativement élevées en E2~s~ nécessaires pour inhiber complètement l'axe HHG, explique sans doute qu'une relation directe entre la T~s~ et l'E2~s~ n'a pu être mise en évidence ici. On constate également sur ce graphique que la Spironolactone n'a pas d'influence notable sur l'axe HHG. En effet, lors de la combinaison œstradiol + Spironolactone, c'est bel et bien l'E2~s~ qui permet une diminution de la T~s~ [@angus2021]. Les T~s~ relativement élevées chez les patient·e·s prenant de la Spironolactone proviennent des valeurs d'E2~s~ plus faibles (voir tableau \@ref(tab:OutcomeTableF)). Après discussion avec les patient·e·s en question lors d'une consultation de suivi, mon hypothèse sur cet E2~s~ bas réside en une application suboptimale du gel chez deux des patient·e·s. Elle ne pourra cependant pas être confirmée d'ici la publication de ce TFE. Pour les personnes sous THAG masculinisant, la situation est quelque peu différente. En effet, c'est la FSH qui stimule la production d'E2~s~ par les ovaires [@hall2019] et c'est majoritairement l'aromatisation de la T~s~ en E2~s~ qui permet d'inhiber la production de FSH [@liu2019]. Autrement dit, une relation linéaire décroissante où la l'E2~s~ diminue tandis que la T~s~ augmente, en miroir de ce qu'on observe sous THAG féminisant, n'est pas observée puisqu'il faut que la T~s~ se transforme en E2~s~ pour que la production endogène d'E2~s~ diminue. En outre, la FSH ne dépend que partiellement de la stimulation de la GnRH, en comparaison avec la LH. De fait, une suppression complète de la GnRH n'entraîne une inhibition que de 40-60% de la FSH contre 90% de la LH [@hall2019]. Ces différents éléments pourraient permettre d'expliquer à la fois les valeurs plus élevées en FSH et en E2~s~ que chez les hommes cisgenres ainsi que le fait que l'ovulation reste possible sous THAG masculinisant, bien que plus rare [@taub2020].
 
 En pratique, pour les patient·e·s sous THAG féminisant présentant une T~s~ supérieure aux valeurs cibles des guidelines et pour lesquel·le·s il existe un inconfort vis-à-vis des effets de la T~s~, le choix se portera entre une augmentation de la dose d'œstradiol pour inhiber l'axe, l'introduction de Spironolactone, comme antagoniste des effets de la T~s~, ou l'introduction d'analogue de la GnRH comme le Depo-Eligard pour la supprimer. En l'absence de données fiables sur la meilleure décision à prendre, celle-ci devra mettre en balance les risques de TVP liés à l'œstradiol avec le coût des traitements et les préférences des patient·e·s. Pour les patient·e·s sous THAG, il est important de garder à l'esprit qu'une ovulation - et donc qu'une grossesse- restent possibles et une contraception adéquate doit être proposée, si nécessaire. En outre, le dosage de FSH/LH a moins d'intérêt clinique chez les patient·e·s transmasculin·e·s que chez les patient·e·s transféminin·e·s.
 
@@ -58,7 +58,7 @@ En pratique, pour les patient·e·s sous THAG féminisant présentant une T~s~ s
 
 Le modèle standard, basé sur le diagnostic psychiatrique de dysphorie de genre, semble avoir encore moins de raison d'être, au vu des résultats de ce TFE. En effet, `r scales::percent(sum(obj_demog_data$adm_pren == '2')/(sum(obj_demog_data$adm_pren == '1')+sum(obj_demog_data$adm_pren == '2')))` et `r scales::percent(sum(obj_demog_data$adm_cec == '2')/(sum(obj_demog_data$adm_cec == '1')+sum(obj_demog_data$adm_cec == '2')))` des patient·e·s ayant changé respectivement de prénom et de marqueur de genre l'avaient fait avant initiation du THAG. Avant le 1^er^ janvier 2018, cela aurait été impossible puisque l'ancienne législation en vigueur prévoyait une approbation psychiatrique, un traitement hormonal, et une stérilisation pour accéder à ces changements administratifs [@servicepublicfederaldejustice2007]. L'État reconnaissant désormais aux individus le droit de déterminer librement leur identité, il n'y a, à mon sens, pas de place pour une évaluation psychiatrique préalablement à l'initiation d'un THAG. Sur quelle base peut-on, en effet, émettre des exigences que le législateur ne reconnait plus ? Si un accompagnement psychologique ou psychiatrique peut être utile durant la transition pour les personnes qui en font la demande, l'exiger comme condition préalable revient à s'opposer aux avancées législatives récentes. En outre, j'argüerai ici qu'un fonctionnement centralisé passant par des services spécialisés présente trois désavantages majeurs en termes de santé publique.
 
-Premièrement, ces centres représentent des barrières supplémentaires dans l'accès au soin des personnes transgenres. En effet, avoir un nombre extrêmement réduit de professionnel·le·s aptes à prodiguer des soins trans-spécifiques a pour conséquences des temps d'attente souvent excessifs, la nécessité de parcourir des distances parfois importantes pour accéder à un·e médecin, et une monopolisation de l'offre de soin [@koehler2021]. Ce monopole se heurte à son tour au droit des patient·e·s de choisir librement leur médecin, dans la mesure où le nombre de professionnel·le·s est restreint. De surcroît, ces centres sont organisés comme de centres de soins ultraspécialisés appartenant à la troisième ligne de soins. Ce faisant, cette organisation même renforce l'idée qu'il s'agit d'une population exceptionnelle, présentant des besoins exceptionnels, concourant ainsi à la pathologisation des transidentités [@ker2021]. Il est important de distinguer ici la médicalisation, qui concerne les interventions de santé et traitements, et la pathologisation, qui se réfère au diagnostic des maladies [@ker2021]. La grossesse, par exemple, est un état presque toujours médicalisé (prises de sang, échographies, accouchement à l'hôpital, etc.), mais que nul ne considère comme pathologique. Or, les services hospitaliers peuvent être vus par les patient·e·s transgenres comme des endroits négatifs, où l'on est envoyé·e, plutôt qu'où l'on décide d'aller, et présentant des disparités de pouvoir importantes entre patient·e·s et spécialistes [@ker2021]. Enfin, je pense que reléguer les soins trans-spécifiques à la troisième ligne de soins contribue à déposséder les médecins des deux premières lignes de l'idée même qu'iels puissent développer des compétences qui paraissent, à tort, aussi complexes et spécialisées. Cette constatation m'a frappé lorsque j'ai référé un jour un homme transgenre à un endocrinologue pour des problèmes de surrénales sans lien aucun avec sa transidentité ou son THAG. Son premier réflexe a alors été de le référer à son tour vers l'endocrinologue du centre d'accompagnement des transidentités de Liège. Cette décision de sa part n'est cependant pas surprenante quand on prend en considération le fait que même les endocrinologues ne sont pas formé·e·s sur les transidentités ni sur le THAG [@irwig2016]. En outre, la même étude américaine a montré que moins d'un tiers des endocrinologues avait vu plus de cinq patient·e·s transgenres sur la totalité de sa carrière. Ce réflexe des deux premières lignes de soin à souvent se déclarer incompétent vis-à-vis des transidentités plutôt que de mobiliser des connaissances déjà présentes ou de chercher à se former découle, en partie, selon moi, de l'image d'exceptionnalité et de complexité qui touche les personnes transgenres et qui est renforcée par leur relégation à la troisième ligne de soins.
+Premièrement, ces centres représentent des barrières supplémentaires dans l'accès au soin des personnes transgenres. En effet, avoir un nombre extrêmement réduit de professionnel·le·s aptes à prodiguer des soins trans-spécifiques a pour conséquences des temps d'attente souvent excessifs, la nécessité de parcourir des distances parfois importantes pour accéder à un·e médecin, et une monopolisation de l'offre de soin [@koehler2021]. Ce monopole se heurte à son tour au droit des patient·e·s de choisir librement leur médecin, dans la mesure où le nombre de professionnel·le·s est restreint. Or, les services hospitaliers peuvent être vus par les patient·e·s transgenres comme des endroits négatifs, où l'on est envoyé·e, plutôt qu'où l'on décide d'aller, et présentant des disparités de pouvoir importantes entre patient·e·s et spécialistes [@ker2021]. De surcroît, ces centres sont organisés comme de centres de soins ultraspécialisés appartenant à la troisième ligne de soins. Ce faisant, cette organisation même renforce l'idée qu'il s'agit d'une population exceptionnelle, présentant des besoins exceptionnels, concourant ainsi à la pathologisation des transidentités [@ker2021]. Il est important de distinguer ici la médicalisation, qui concerne les interventions de santé et traitements, et la pathologisation, qui se réfère au diagnostic des maladies [@ker2021]. La grossesse, par exemple, est un état presque toujours médicalisé (prises de sang, échographies, accouchement à l'hôpital, etc.), mais que nul ne considère comme pathologique. Enfin, je pense que reléguer les soins trans-spécifiques à la troisième ligne de soins contribue à déposséder les médecins des deux premières lignes de l'idée même qu'iels puissent développer des compétences qui paraissent, à tort, aussi complexes et spécialisées. Cette constatation m'a frappé lorsque j'ai référé un jour un homme transgenre à un endocrinologue pour des problèmes de surrénales sans lien aucun avec sa transidentité ou son THAG. Son premier réflexe a alors été de le référer à son tour vers l'endocrinologue du centre d'accompagnement des transidentités de Liège. Cette décision de sa part n'est cependant pas surprenante quand on prend en considération le fait que même les endocrinologues ne sont pas formé·e·s sur les transidentités ni sur le THAG [@irwig2016]. En outre, la même étude américaine a montré que moins d'un tiers des endocrinologues avait vu plus de cinq patient·e·s transgenres sur la totalité de sa carrière. Ce réflexe des deux premières lignes de soin à souvent se déclarer incompétentes vis-à-vis des transidentités plutôt que de mobiliser des connaissances déjà présentes ou de chercher à se former découle, en partie, selon moi, de l'image d'exceptionnalité et de complexité qui touche les personnes transgenres et qui est renforcée par leur relégation à la troisième ligne de soins.
 
 Pourtant, les patient·e·s transgenres sont en demande de soins de première ligne qui soient à la fois trans-affirmatifs et de qualité [@lee2022]. Améliorer la prise en charge de première ligne des personnes transgenres m'apparaît donc comme un enjeu important. De plus, une prise en charge trans-spécifique décentralisée en première ligne permet de favoriser l'accès au soin, le libre choix des médecins et des traitements, ainsi qu'une meilleure implication des médecins au sein de la communauté [@koehler2021].
 
