--- a/08-appendix.Rmd
+++ b/08-appendix.Rmd
@@ -124,7 +124,7 @@ La première année, un monitoring trimestriel est de mise afin de s'assurer du 
 
 -   Frottis cervico-vaginaux selon les guidelines classiques
 
--   Si mastectomie, encourager quand même une (auto-)palpation sous- et péri-aréolaire, le risque de cancer du sein devenant très faible, mais non nul. Si la poitrine est toujours présente, dépistage du cancer du sein selon les guidelines classiques
+-   Si mastectomie, encourager quand même une (auto-)palpation sous- et périaréolaire, le risque de cancer du sein devenant très faible, mais non nul. Si la poitrine est toujours présente, dépistage du cancer du sein selon les guidelines classiques
 
 ### Quelle sécurité sur le long terme ?
 
@@ -162,7 +162,7 @@ On retrouve une anovulation liée à une suppression de l'axe hypothalamo-hypoph
 
 -   L'implant contraceptif peut également être envisagé, l'étonogestrel ayant une activité androgénique faible et ne représentant pas un risque d'interaction avec le traitement hormonal
 
--   Les pilules œstro-progestatives sont à éviter, en raison d'interactions potentielles vu l'augmentation du SHBG pouvant mener à une diminution de la testostérone libre. En outre, on retrouve une possible stimulation mammaire pouvant entraîner de la dysphorie chez le patient.
+-   Les pilules œstroprogestatives sont à éviter, en raison d'interactions potentielles liées à l'augmentation du SHBG pouvant mener à une diminution de la testostérone libre. En outre, on retrouve une possible stimulation mammaire pouvant entraîner de la dysphorie chez le patient.
 
 \newpage
 
