--- a/references.bib
+++ b/references.bib
@@ -175,6 +175,21 @@
   file = {C\:\\Users\\maxen\\Zotero\\storage\\6Q4S9D8X\\walstat-catalogue.html},
 }
 
+@Article{goodman2019,
+  title = {Size and {{Distribution}} of {{Transgender}} and {{Gender Nonconforming Populations}}},
+  author = {Michael Goodman and Noah Adams and Trevor Corneil and Baudewijntje Kreukels and Joz Motmans and Eli Coleman},
+  year = {2019},
+  month = {jun},
+  journal = {Endocrinology and Metabolism Clinics of North America},
+  volume = {48},
+  number = {2},
+  pages = {303--321},
+  issn = {08898529},
+  doi = {10.1016/j.ecl.2019.01.001},
+  langid = {english},
+  file = {C\:\\Users\\maxen\\Zotero\\storage\\KBA99KXM\\Goodman et al. - 2019 - Size and Distribution of Transgender and Gender No.pdf},
+}
+
 @Article{green2021,
   title = {Association of {{Gender-Affirming Hormone Therapy With Depression}}, {{Thoughts}} of {{Suicide}}, and {{Attempted Suicide Among Transgender}} and {{Nonbinary Youth}}},
   author = {Amy E. Green and Jonah P. DeChants and Myeshia N. Price and Carrie K. Davis},
@@ -244,7 +259,6 @@
   journal = {Cochrane Database of Systematic Reviews},
   volume = {2020},
   number = {11},
-  pages = {undefined-undefined},
   issn = {14651858},
   abstract = {(2020) Haupt et al. Cochrane Database of Systematic Reviews. Background: Gender dysphoria is described as a mismatch between an individual's experienced or expressed gender and their assigned gende...},
   langid = {british},
@@ -277,7 +291,6 @@
   journal = {International Journal of Environmental Research and Public Health},
   volume = {19},
   number = {3},
-  pages = {undefined-undefined},
   issn = {16604601},
   doi = {10.3390/ijerph19031229},
   abstract = {(2022) Hostetter et al. International Journal of Environmental Research and Public Health. Transgender and nonbinary (TNB) individuals face disparities in nearly every aspect of health. One factor ...},
@@ -437,7 +450,6 @@
   author = {Joy L. Lee and Monica Huffman and Nicholas A. Rattray and Jennifer L. Carnahan and J. Dennis Fortenberry and Janine M. Fogel and Michael Weiner and Marianne S. Matthias},
   year = {2022},
   journal = {Journal of General Internal Medicine},
-  pages = {undefined-undefined},
   issn = {15251497},
   doi = {10.1007/s11606-022-07408-5},
   abstract = {(2022) Lee et al. Journal of General Internal Medicine. Background: Transgender individuals are less likely to have had a primary care visit in the last year than cisgender individuals. While the i...},
